トークン認証、認可 実装完了